<resources>
    <string name="app_name">Teams</string>
    <string name="teamlist">Display the list of Teams</string>
    <string name="teammap">Display the map</string>
    <string name="teamsettings">Display the Settings</string>
    <string name="toggleButton">OFF</string>
    <string name="save">SAVE</string>
    <string name="description">Description</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name:</string>
    <string name="city">City:</string>
    <string name="enter_city">Enter City</string>
    <string name="rating">Rating:</string>
    <string name="Rate">Rate</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="enter_cell_number">Enter Cell Number</string>
    <string name="delete">Delete:</string>
    <string name="new1">New</string>
    <string name="favorite">Favorite</string>
    <string name="sort_teams_by">Sort Teams By:</string>
    <string name="acending">Acending</string>
    <string name="descending">Descending</string>
    <string name="order_by">Order By:</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="find">find</string>
    <string name="zip">zip</string>
    <string name="state">state</string>
    <string name="street_address">street address</string>
    <string name="from_my_location">From Location</string>
    <string name="look_up">Look up</string>
    <string name="north">North</string>
    <string name="normal">normal</string>
    <string name="satellite">satellite</string>
</resources>