<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamMapActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_name"
        android:layout_marginTop="16dp"
        android:textSize="25dp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_lookup"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/look_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_fromlocation"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/from_my_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_name" />

    <EditText
        android:layout_width="344dp"
        android:layout_height="46dp"
        android:id="@+id/editText_streetAddress"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:inputType="textPostalAddress"
        android:hint="@string/street_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_lookup"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_city"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/city"
        app:layout_constraintStart_toStartOf="@id/editText_streetAddress"
        app:layout_constraintTop_toBottomOf="@id/editText_streetAddress"/>

    <EditText
        android:layout_width="41dp"
        android:layout_height="44dp"
        android:id="@+id/editText_state"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:inputType="textPersonName"
        android:hint="@string/state"
        android:ems="3"
        app:layout_constraintBaseline_toBaselineOf="@id/editText_city"
        app:layout_constraintStart_toEndOf="@id/editText_city"/>

    <EditText
        android:layout_width="71dp"
        android:layout_height="44dp"
        android:id="@+id/editText_zip"
        android:layout_marginStart="8dp"
        android:inputType="number"
        android:hint="@string/zip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/editText_state"
        app:layout_constraintStart_toEndOf="@id/editText_state"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_find"
        android:text="@string/find"
        app:layout_constraintStart_toStartOf="@id/editText_city"
        app:layout_constraintTop_toBottomOf="@id/editText_city"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_save"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="@id/editText_city"
        app:layout_constraintTop_toBottomOf="@id/button_find"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_latitude"
        android:text="@string/latitude"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintTop_toTopOf="@id/button_find"
        app:layout_constraintLeft_toRightOf="@id/button_find"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_longitude"
        android:text="@string/longitude"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintTop_toTopOf="@id/button_save"
        app:layout_constraintLeft_toRightOf="@id/button_save"/>

    <!-- <fragment
         android:layout_width="0dp"
         android:layout_height="250dp"
         android:id="@+id/map"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginTop="5dp"
         app:layout_constraintBottom_toTopOf="@id/navbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>-->

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/teamlist"
            app:srcCompat="@drawable/contactlisticon" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/teammap"
            app:srcCompat="@drawable/mapicon" />

        <ImageButton

            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/teamsettings"
            app:srcCompat="@drawable/settingsicon" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>